kustomize/instances/overlays/frontend/hipstershop/istio/virtualservices/productcatalog-canary/productcatalog-canary-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: productcatalog-canary-vs
spec:
  hosts:
  - 'productcatalogservice'
  http:
  - route:
    - destination:
        host: productcatalogservice
        subset: v1
      weight: 100
    - destination:
        host: productcatalogservice
        subset: v2
      weight: 0
